Update heading text

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <label for="Other"><input type="checkbox" value="checkbox" id="Other" />Other </label>
         </fieldset>
         <fieldset>
-          <p>What would be your dream ice cream combination?</p>
+          <p>What would be a dream ice cream combination?</p>
           <textarea
             name="text"
             id="text"
